tests/snapshots/validator_snapshots__validator_all@validator-134.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p1_duplicate_name_in_module_errors.of
---
ValidationErrors(
    [
        "duplicate top-level name 'X' in module 'test_module'",
    ],
)
