tests/snapshots/validator_snapshots__validator_all@validator-135.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p2_function_signature_resolved.of
---
Ok
