tests/snapshots/validator_snapshots__validator_all@validator-136.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p2_bound_referencing_interface_ok.of
---
Ok
