tests/snapshots/validator_snapshots__validator_all@validator-137.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p2_pointer_in_extern_struct_ok.of
---
Ok
