tests/snapshots/validator_snapshots__validator_all@validator-138.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p2_bound_must_be_interface.of
---
ValidationErrors(
    [
        "bound on type parameter 'T' in test_module::Foo must be an interface",
    ],
)
