tests/snapshots/validator_snapshots__validator_all@validator-14.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/language/14_iterators.of
---
ParserError(
    "unexpected token 'self'",
)
