tests/snapshots/validator_snapshots__validator_all@validator-141.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p2_generic_arity_mismatch_errors.of
---
ValidationErrors(
    [
        "type 'Wrapper' in module 'test_module' expects 1 generic argument(s), got 2",
    ],
)
