tests/snapshots/validator_snapshots__validator_all@validator-142.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p2_unknown_type_errors.of
---
ValidationErrors(
    [
        "unknown type 'Nope' in module 'test_module'",
    ],
)
