tests/snapshots/validator_snapshots__validator_all@validator-143.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p3_extend_adds_specialised_method.of
---
Ok
