tests/snapshots/validator_snapshots__validator_all@validator-144.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p2_pointer_outside_extern_errors.of
---
ParserError(
    "unexpected token '*'",
)
